# tree-sitter-gosu

./: CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  run.sh  setup.py  tree-sitter.json
bindings/c/: tree-sitter-gosu.pc.in
bindings/c/tree_sitter/: tree-sitter-gosu.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gosu/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGosuTests/: TreeSitterGosuTests.swift
test/corpus/: basics.txt  variable-declarations.txt
