[package]
name = "tree-sitter-gosu"
description = "Gosu is a statically typed general-purpose programming language that runs on the Java Virtual Machine."
version = "0.1.0"
authors = ["Marek Kubica <marek@tarides.com>"]
license = "UNLICENSED"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gosu"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tarides/tree-sitter-gosu"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
