[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gosu"
description = "Gosu is a statically typed general-purpose programming language that runs on the Java Virtual Machine."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "gosu"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Marek Kubica", email = "marek@tarides.com" }]
requires-python = ">=3.10"
license.text = "UNLICENSED"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tarides/tree-sitter-gosu"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
